fixing overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ a {
 
 html {
   font-size: 62.5%;
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+  overflow-x: hidden; }
 
 body {
   width: 100%;
@@ -66,8 +67,7 @@ body {
   background-color: #abceda;
   line-height: 1.5;
   color: #ccc;
-  overflow-x: hidden;
-  position: relative; }
+  overflow-x: hidden; }
 
 .heading {
   font-family: "Spartan"; }
@@ -669,7 +669,7 @@ body {
   .navigation {
     display: block;
     width: 100%;
-    background-color: #000f36; }
+    position: relative; }
     .navigation__checkbox {
       display: none; }
     .navigation__button {
@@ -686,9 +686,10 @@ body {
       top: 1rem;
       left: 1rem; }
     .navigation__nav {
+      width: 100%;
       height: 30vh;
       position: fixed;
-      top: 0;
+      top: 0%;
       left: 0;
       z-index: 15;
       opacity: 0;
@@ -702,6 +703,7 @@ body {
       list-style: none;
       text-align: center; }
     .navigation__item {
+      width: 90%;
       margin: 0.5rem;
       display: flex;
       justify-content: center;
@@ -754,6 +756,14 @@ body {
     .navigation__checkbox:checked + .navigation__button .navigation__icon::after {
       top: 0;
       transform: rotate(-135deg); } }
+
+@media only screen and (max-width: 450px) {
+  .navigation {
+    display: block;
+    width: 90%;
+    position: relative; }
+    .navigation__nav {
+      width: 90%; } }
 
 .section__projects {
   width: 100%;
