--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -112,7 +112,7 @@
     .navigation {
         display: block;
         width: 100%;
-        background-color: $color-nav;
+        position: relative;
 
         &__checkbox {
             display: none;
@@ -133,25 +133,11 @@
             left: 1rem;
         }
 
-        // &__background {
-        //     height: 6rem;
-        //     width: 6rem;
-        //     border-radius: 0.5rem;
-        //     background-image: radial-gradient($color-tertiary, transparent);
-        //     backdrop-filter: blur(1rem);
-        //     -webkit-backdrop-filter: blur(1rem);
-        //     -moz-backdrop-filter: blur(1rem);
-        //     position: fixed;
-        //     top: 1rem;
-        //     left: 1rem;
-        //     z-index: 10;
-        //     transition: transform 0.8s;
-        // }
-
         &__nav {
+            width: 100%;
             height: 30vh;
             position: fixed;
-            top: 0;
+            top: 0%;
             left: 0;
             z-index: 15;
             opacity: 0;
@@ -175,6 +161,7 @@
         }
 
         &__item {
+            width: 90%;
             margin: 0.5rem;
             display: flex;
             justify-content: center;
@@ -269,6 +256,18 @@
         &__checkbox:checked + &__button &__icon::after {
             top: 0;
             transform: rotate(-135deg);
+        }
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .navigation {
+        display: block;
+        width: 90%;
+        position: relative;
+
+        &__nav {
+            width: 90%;
         }
     }
 }
